fixed white space issue with code elements

--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
             To get started with writing JavaScript, open the Scratchpad and
             write your first "Hello world" JavaScript code:
           </p>
-          <code>
-            function greetMe(yourName) { alert("Hello " + yourName); }
+          <code
+            >function greetMe(yourName) { alert("Hello " + yourName); }
             greetMe("World");
           </code>
           <p>
@@ -233,9 +233,9 @@
             This behavior changes, when using the let declaration introduced in
             ECMAScript 2015.
           </p>
-          <code>
-            if (true) { let y = 5; } console.log(y); // ReferenceError: y is not
-            defined
+          <code
+            >if (true) { let y = 5; } console.log(y); // ReferenceError: y is
+            not defined
           </code>
         </article>
       </section>
@@ -281,8 +281,8 @@
             You cannot declare a constant with the same name as a function or
             variable in the same scope. For example:
           </p>
-          <code>
-            // THIS WILL CAUSE AN ERROR function f() {}; const f = 5; // THIS
+          <code
+            >// THIS WILL CAUSE AN ERROR function f() {}; const f = 5; // THIS
             WILL CAUSE AN ERROR ALSO function f() { const g = 5; var g;
             //statements }
           </code>
@@ -290,8 +290,8 @@
             However, object attributes are not protected, so the following
             statement is executed without problems.
           </p>
-          <code>
-            const MY_OBJECT = {"key": "value"}; MY_OBJECT.key = "otherValue";
+          <code
+            >const MY_OBJECT = {"key": "value"}; MY_OBJECT.key = "otherValue";
           </code>
         </article>
       </section>
@@ -353,8 +353,8 @@
             You may also compound the statements using else if to have multiple
             conditions tested in sequence, as follows:
           </p>
-          <code>
-            if (condition_1) { statement_1; } else if (condition_2) {
+          <code
+            >if (condition_1) { statement_1; } else if (condition_2) {
             statement_2; } else if (condition_n) { statement_n; } else {
             statement_last; }
           </code>
@@ -365,8 +365,8 @@
             general, it's good practice to always use block statements,
             especially when nesting if statements:
           </p>
-          <code>
-            if (condition) { statement_1_runs_if_condition_is_true;
+          <code
+            >if (condition) { statement_1_runs_if_condition_is_true;
             statement_2_runs_if_condition_is_true; } else {
             statement_3_runs_if_condition_is_false;
             statement_4_runs_if_condition_is_false; }
