added back to top button

--- a/index.html
+++ b/index.html
@@ -482,6 +482,11 @@
               </a>
             </li>
           </ul>
+          <a href="#Introduction">
+            <button type="button" class="back-to-top">
+              <img src="./assets/arrow-icon.gif" alt="Arrow icon for back to top button">
+            </button>
+          </a>
         </article>
       </section>
     </main>
