added page description meta tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
+    <meta name="description" content="Explore the foundational concepts of JavaScript programming language with this comprehensive technical documentation. Learn about variables, data types, control flow, and more, sourced from MDN Web Docs. Enhance your JavaScript skills today!" />
     <title>Technical Documentation Page</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
